--- a/projekat-bootstrap/scss/_navbar.scss
+++ b/projekat-bootstrap/scss/_navbar.scss
@@ -1,8 +1,8 @@
 
-nav {
+/* nav {
     background-color: $blueish;
     color: white;
-    width: 100%;
+    width: 100%; 
 }
 p:first-child {
     color: white;
@@ -13,4 +13,8 @@ p:first-child {
 }
 .menu > button {
     background-color: $greenish;
+} */
+.navigation {
+    background-color: $blueish;
+    color: white;
 }
