--- a/projekat-bootstrap/scss/_contact.scss
+++ b/projekat-bootstrap/scss/_contact.scss
@@ -12,3 +12,11 @@
     border: 1px solid white;
     border-radius: 7%, 7%;
 }
+.contact input::placeholder {
+    border-top: none;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+.contact h3 {
+    padding-top: 10%;
+}
