--- a/events.css
+++ b/events.css
@@ -8,3 +8,26 @@
     height: 50px;
     width: 200px;
 }
+
+body{
+    background-image: url("images/field.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-sizing: border-box;
+
+}
+    .container{
+        width: 1890px;
+        height: 950px;
+        display: block;
+        border: solid 2px red; 
+        position: relative;
+    }
+
+
+#player1 {
+    width: 4%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+} 
